<resources>
    <string name="app_name">wealthwise</string>
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginLabel">Login</string>
    <string name="not_a_member_register_here">Not a member? Register here</string>
    <string name="already_a_member_login_here">Already a member? Login here</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="prevBtn"><![CDATA[<]]></string>
    <string name="nextBtn"><![CDATA[>]]></string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="total">Total</string>
    <string name="transaction_icon">Transaction Icon</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="goals">Goals</string>
    <string name="profile">Profile</string>
    <string name="add_transactions">Add Transactions</string>
    <string name="date">Date:</string>
    <string name="account">Account:</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
</resources>