<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B223D"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="270dp"
        android:autofillHints=""
        android:backgroundTint="#FF8D45"
        android:ems="10"
        android:fontFamily="@font/crimson_pro"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF8D45"
        android:textColorHint="#FF8D45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:clickable="true"
        android:onClick="onClickLoginRegisterLink"
        android:text="@string/already_a_member_login_here"
        android:textColor="#ff8D45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="400dp"
        android:autofillHints=""
        android:backgroundTint="#FF8D45"
        android:ems="10"
        android:fontFamily="@font/crimson_pro"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF8D45"
        android:textColorHint="#FF8D45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="470dp"
        android:autofillHints=""
        android:backgroundTint="#FF8D45"
        android:ems="10"
        android:fontFamily="@font/crimson_pro"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF8D45"
        android:textColorHint="#FF8D45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="248dp"
        android:layout_height="246dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_foreground" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="330dp"
        android:autofillHints=""
        android:backgroundTint="#FF8D45"
        android:ems="10"
        android:fontFamily="@font/crimson_pro"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF8D45"
        android:textColorHint="#FF8D45"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="540dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>