<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B223D"
    tools:context=".ProfileActivity">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:stretchColumns="0,1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/transactionView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/transaction_icon"
                android:foregroundGravity="center"
                android:onClick="onClick"
                app:srcCompat="@mipmap/transaction_foreground" />

            <ImageView
                android:id="@+id/statsView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/transaction_icon"
                android:foregroundGravity="center"
                android:onClick="onClick"
                app:srcCompat="@mipmap/graph_foreground" />

            <ImageView
                android:id="@+id/goalsView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/transaction_icon"
                android:foregroundGravity="center"
                android:onClick="onClick"
                app:srcCompat="@mipmap/goals_foreground" />

            <ImageView
                android:id="@+id/profileView"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:contentDescription="@string/transaction_icon"
                android:foregroundGravity="center"
                app:srcCompat="@mipmap/profile_foreground" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimson_pro"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/statsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimson_pro"
                android:gravity="center"
                android:text="@string/stats"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/goalsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimson_pro"
                android:gravity="center"
                android:text="@string/goals"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crimson_pro"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/profileimg_foreground" />

    <TextView
        android:id="@+id/userProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/crimson_pro"
        android:text="User Profile"
        android:textAllCaps="true"
        android:textColor="#FF8D45"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/full_name"
        android:textColor="#FF8D45"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nameResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/full_name"
        android:textColor="#FF8D45"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/email"
        android:textColor="#FF8D45"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/emailResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/crimson_pro"
        android:text="@string/email"
        android:textColor="#FF8D45"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <Button
        android:id="@+id/changePassBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/crimson_pro"
        android:onClick="onClick"
        android:text="Change Password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:background="@drawable/round_shape_btn"
        android:fontFamily="@font/crimson_pro"
        android:onClick="onClick"
        android:text="Logout"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>